# htmpl-template

./: LICENSE  Makefile  README.md  build_release.py  conda-lock.yml  copier.yaml  pyproject.toml
rendered/: __init__.py  app.py  main.py  settings.py  types.py
rendered/components/: auth
rendered/services/: htmpl_admin
service/: graph.py
src/htmpl_template/: __init__.py  cli.py
template/: Makefile  pyproject.toml.jinja
template/app/: main.py  types.py
template/app/services/htmpl_admin/: components.ttl  graph.py  service.py
template/app/services/observe/: __init__.py  exporter.py  extension.py  pages.py  routes.py  store.py
template/{{name}}/: .htmpl.yaml.jinja  Makefile  README.md  dotenv  pyproject.toml.jinja
template/{{name}}/app/: main.py  settings.py
template/{{name}}/app/components/{% if auth %}auth{% endif %}/: component.toml
template/{{name}}/app/services/htmpl_admin/: routes.py  service.py
template/{{name}}/static/css/: manager.css
template/{{name}}/{{module}}/: app.py  settings.py
template/{{name}}/{{module}}/_admin/: manager.py
template/{{name}}/{{module}}/components/{% if auth %}auth{% endif %}/: README.md  __init__.py  component.toml  forms.py  widgets.py
template/{{name}}/{{module}}/services/htmpl_admin/: graph.py  routes.py  service.py
tests/: test_graph.py
