[project]
name = "htmpl-template"
version = "0.0.1"
description = "Starter template for projects using 'htmpl'"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Robert Myers", email = "robert@julython.org" }]
keywords = ["html", "templating", "t-strings", "fastapi", "htmx", "pico"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]

dependencies = ["copier"]

[project.optional-dependencies]
dev = [
  "tdom",
  "htmpl",
  "cuneus",
  "rdflib",
  "fastapi",
  "mistune",
  "python-multipart",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
]

[project.scripts]
htmpl-template = "htmpl_template.cli:main"

[project.urls]
Homepage = "https://github.com/rmyers/htmpl-template"
Documentation = "https://github.com/rmyers/htmpl-template#readme"
Repository = "https://github.com/rmyers/htmpl-template"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htmpl_template"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  # "--test-alembic",
  "--log-cli-level=warning",
  # "--junitxml=junit/test-results.xml",
  "--cov=./template",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--strict-markers",
  "--strict-config",
  "--verbose",
]
filterwarnings = [
  # Enable 'error' to treat all warnings as errors
  # "error",
  "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]
